force-app/main/default/objects/SEG_GruposServiciosCSO__c/SEG_GruposServiciosCSO__c.object-meta.xml
<CustomObject>
    <label>Grupos Servicios CSO</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Grupos Servicios CSO ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grupos Servicios CSO</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>