force-app/main/default/objects/SEG_GruposServiciosCSO__c/fields/SEG_GrupoActivoCSO__c.field-meta.xml
<CustomField>
    <fullName>SEG_GrupoActivoCSO__c</fullName>
    <formula>SEG_GrupoCSO__r.SEG_ActivoCSO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grupo Activo CSO</label>
    <type>Checkbox</type>
</CustomField>