force-app/main/default/objects/SEG_GruposServiciosCSO__c/fields/SEG_GrupoCSO__c.field-meta.xml
<CustomField>
    <fullName>SEG_GrupoCSO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grupos CSO</label>
    <referenceTo>SEG_GruposCSO__c</referenceTo>
    <relationshipLabel>Grupos Servicios CSO</relationshipLabel>
    <relationshipName>Grupos_Servicios_CSO</relationshipName>
    <type>Lookup</type>
</CustomField>