force-app/main/default/objects/SEG_GruposServiciosCSO__c/fields/SEG_GruposServiciosCSO__c.field-meta.xml
<CustomField>
    <fullName>SEG_GruposServiciosCSO__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <label>Grupos ServiciosCSO</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>